@@ -71,18 +71,22 @@ class tx_kickstarter_wizard extends tx_kickstarter_compilefiles {
 	function tx_kickstarter_wizard() {
 		$this->modData = t3lib_div::_POST($this->varPrefix);
 
-		// getting the available languages
-		$theLanguages = t3lib_div::trimExplode('|', TYPO3_languages);
-		$llFile = t3lib_extMgm::extPath('setup') . '/mod/locallang.xml';
 		$version = class_exists('t3lib_utility_VersionNumber')
 				? t3lib_utility_VersionNumber::convertVersionNumberToInteger(TYPO3_version)
 				: t3lib_div::int_from_ver(TYPO3_version);
 		if ($version < 4006000) {
-			$LOCAL_LANG = t3lib_div::readLLXMLfile($llFile, 'default');
+			$LOCAL_LANG = t3lib_div::readLLXMLfile(t3lib_extMgm::extPath('setup') . '/mod/locallang.xml', 'default');
+				// Getting the available languages
+			$theLanguages = t3lib_div::trimExplode('|', TYPO3_languages);
 		} else {
-			/** @var $llxmlParser t3lib_l10n_parser_Llxml */
-			$llxmlParser = t3lib_div::makeInstance('t3lib_l10n_parser_Llxml');
-			$LOCAL_LANG = $llxmlParser->getParsedData($llFile, 'default');
+			/** @var $xliffParser t3lib_l10n_parser_Xliff */
+			$xliffParser = t3lib_div::makeInstance('t3lib_l10n_parser_Xliff');
+			$LOCAL_LANG = $xliffParser->getParsedData(t3lib_extMgm::extPath('setup') . '/mod/locallang.xlf', 'default');
+
+			/** @var $locales t3lib_l10n_Locales */
+			$locales = t3lib_div::makeInstance('t3lib_l10n_Locales');
+				// Getting the available languages
+			$theLanguages = $locales->getLocales();
 		}
 		foreach ($theLanguages as $val) {
 			if ($val !== 'default') {
