@@ -1,3 +1,7 @@
+2011-08-04 Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed retrieval of common labels in kickstarter wizard when using TYPO3 4.6 (XLIFF)
+
 2011-07-24 Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #10232: Reflect changes in main module names in TYPO3 4.2 (credits Francois Suter)
